[package]
name = "kubeman"
version = "0.1.0"
description = "CLI application for managing kubernetes config"
authors = ["Oleg Yurchik <oleg@yurchik.space>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.66"
readme = "README.md"

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
hashbrown = "0.13.2"
home = "0.5.4"
sha256 = "1.1.1"
